ci(semver): upddated for auto sem ver and deployment
Added various dev devDependencies to aid with github workflows and deployment of package/image

--- a/docker/docker-compose.example.yml
+++ b/docker/docker-compose.example.yml
@@ -1,6 +1,6 @@
 services:
   sekhmet:
-    container_name: heimdallr_main
+    container_name: sekhmet_app
     build:
       context: ../
       dockerfile: ./docker/sekhmet/Dockerfile
