--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-    "name": "commandkit-app",
+    "name": "sekhmet",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/VulgarBear/sekhmet.git"
+    },
     "packageManager": "yarn@4.6.0",
     "type": "commonjs",
     "main": "./src/sekhmet.js",
     "version": "0.2.0",
     "scripts": {
         "start": "node ./src/sekhmet.js",
-        "dev": "nodemon --ext js,json,ts ./src/sekhmet.js"
+        "dev": "nodemon --ext js,json,ts ./src/sekhmet.js",
+        "cm": "git cz"
     },
     "dependencies": {
         "commandkit": "^0.1.10",
@@ -16,5 +21,53 @@
         "nodemon": "^3.1.9",
         "pino": "^9.6.0",
         "pino-pretty": "^13.0.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^19.8.0",
+        "@iwavesmedia/semantic-release-composer": "^1.1.0",
+        "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^11.0.1",
+        "@semantic-release/npm": "^12.0.1",
+        "@semantic-release/release-notes-generator": "^14.0.3",
+        "commitizen": "^4.3.1",
+        "cz-conventional-changelog": "^3.3.0",
+        "semantic-release": "^24.2.3"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "release": {
+        "branches": [
+            "main"
+        ],
+        "tagFormat": "${version}",
+        "plugins": [
+            "@semantic-release/release-notes-generator",
+            "@semantic-release/changelog",
+            "@ambimax/semantic-release-composer",
+            [
+                "@semantic-release/npm",
+                {
+                    "npmPublish": false
+                }
+            ],
+            [
+                "@semantic-release/git",
+                {
+                    "assets": [
+                        "CHANGELOG.md",
+                        "package.json",
+                        "yarn.lock",
+                        "composer.json",
+                        "composer.lock"
+                    ],
+                    "message": "chore(release): v${nextRelease.version} [release]"
+                }
+            ],
+            "@semantic-release/github"
+        ]
     }
 }
