fix(semver): updated tag-version.yml
Updated tag-version.yml in an attempt to resolve the failures. Enabled corepack and node.js 20.x

fix #2

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "type": "git",
         "url": "https://github.com/VulgarBear/sekhmet.git"
     },
+    "packageManager": "yarn@4.6.0",
     "type": "commonjs",
     "main": "./src/sekhmet.js",
     "version": "0.2.0",
