--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -18,10 +18,14 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
 
-      - name: Set Node.js 19.x
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Set Node.js 20.x
         uses: actions/setup-node@v3
         with:
-          node-version: 19.x
+          node-version: 20.x
+          cache: "yarn"
 
       # node dependency cache
       # this is not required but speeds up the process
