--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "conventionalCommits.scopes": [
     "beta"
+  ],
+  "cSpell.words": [
+    "borales",
+    "commandkit",
+    "iwavesmedia"
   ]
 }
