--- a/package.json
+++ b/package.json
@@ -55,6 +55,12 @@
                 }
             ],
             [
+              "@iwavesmedia/semantic-release-composer",
+              {
+                "skipOnMissingComposerJson": true
+              }
+            ],
+            [
                 "@semantic-release/git",
                 {
                     "assets": [
