--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -1,16 +1,29 @@
-- id: semver-tag
-  uses: gandarez/semver-action@master
-  with:
-    branching_model: "git-flow"
-    prefix: "ver"
-    prerelease_id: "alpha"
-    main_branch_name: "main"
-    develop_branch_name: "dev"
-    patch_pattern: "^fix/.+"
-    minor_pattern: "^feat/.+"
-    major_pattern: "^major/.+"
-    build_pattern: "^build/.+"
-    hotfix_pattern: "^hotfix/.+"
-    exclude_pattern: "^ignore/.+"
-- name: "Created tag"
-  run: echo "tag ${{ steps.semver-tag.outputs.semver_tag }}"
+name: Semver Tag
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: semver-tag
+        uses: gandarez/semver-action@master
+        with:
+          branching_model: "git-flow"
+          prefix: "ver"
+          prerelease_id: "alpha"
+          main_branch_name: "main"
+          develop_branch_name: "dev"
+          patch_pattern: "^fix/.+"
+          minor_pattern: "^feat/.+"
+          major_pattern: "^major/.+"
+          build_pattern: "^build/.+"
+          hotfix_pattern: "^hotfix/.+"
+          exclude_pattern: "^ignore/.+"
+
+      - name: "Created tag"
+        run: echo "tag ${{ steps.semver-tag.outputs.semver_tag }}"
