feat(funCommands): :sparkles: Added bored and eightball commands
Added bored and eightball commands, began process of setting up helper file to assit. Added axios to project.

Axios required to operate any query commands

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cm": "git cz"
     },
     "dependencies": {
+        "axios": "^1.8.4",
         "commandkit": "^0.1.10",
         "discord.js": "^14.18.0",
         "dotenv": "^16.4.7",
@@ -55,10 +56,10 @@
                 }
             ],
             [
-              "@iwavesmedia/semantic-release-composer",
-              {
-                "skipOnMissingComposerJson": true
-              }
+                "@iwavesmedia/semantic-release-composer",
+                {
+                    "skipOnMissingComposerJson": true
+                }
             ],
             [
                 "@semantic-release/git",
