feat(funCommands): :sparkles: Added additional fun commands
Added fun commands (aniQuote, bored, eightball, insult); set standard options for all commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "conventionalCommits.scopes": [
-    "beta"
+    "beta",
+    "funCommands"
   ],
   "cSpell.words": [
+    "Animechan",
     "borales",
     "commandkit",
-    "iwavesmedia"
+    "iwavesmedia",
+    "Vulgarbear"
   ]
 }
