feat(beta): :sparkles: Introduced starboard functionality and feedback
Starboards are back along with a new feedback command for providing notes on what you want to see in the bot.

MongoDB now required to run Sekhmet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
   "conventionalCommits.scopes": [
     "beta",
-    "funCommands"
+    "funCommands",
+    "beta"
   ],
   "cSpell.words": [
     "Animechan",
+    "Baldur's",
     "borales",
+    "Checkmark",
     "commandkit",
+    "cooldown",
+    "Crossmark",
     "iwavesmedia",
     "Vulgarbear"
   ]
