--- a/docker/sekhmet.env.example
+++ b/docker/sekhmet.env.example
@@ -1,3 +1,10 @@
-# Sekhmet Beta .env
+# Sekhmet Configuration
+## The Talking Room Community
+
+# BOT
 TOKEN = # Your Bot's Token
 EMBED = # Hex Code with preferred color
+BOT_PORT = # Preferred Port
+FEEDBACK_ID= # Feedback Channel ID
+
+# API KEYS
