--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "version": "0.3.1",
     "scripts": {
         "start": "node ./src/sekhmet.js",
-        "dev": "nodemon --ext js,json,ts ./src/sekhmet.js",
-        "cm": "git cz"
+        "dev": "nodemon --ext js,json,ts ./src/sekhmet.js"
     },
     "dependencies": {
         "axios": "^1.8.4",
@@ -18,62 +17,13 @@
         "discord.js": "^14.18.0",
         "dotenv": "^16.4.7",
         "global": "^4.4.0",
+        "mongoose": "^8.13.1",
         "nodemon": "^3.1.9",
         "pino": "^9.6.0",
         "pino-pretty": "^13.0.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^19.8.0",
-        "@iwavesmedia/semantic-release-composer": "^1.1.0",
-        "@semantic-release/changelog": "^6.0.3",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^11.0.1",
-        "@semantic-release/npm": "^12.0.1",
-        "@semantic-release/release-notes-generator": "^14.0.3",
-        "commitizen": "^4.3.1",
-        "cz-conventional-changelog": "^3.3.0",
-        "semantic-release": "^24.2.3"
+
     },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
-    },
-    "release": {
-        "branches": [
-            "main"
-        ],
-        "tagFormat": "${version}",
-        "plugins": [
-            "@semantic-release/release-notes-generator",
-            "@semantic-release/changelog",
-            "@iwavesmedia/semantic-release-composer",
-            [
-                "@semantic-release/npm",
-                {
-                    "npmPublish": false
-                }
-            ],
-            [
-                "@iwavesmedia/semantic-release-composer",
-                {
-                    "skipOnMissingComposerJson": true
-                }
-            ],
-            [
-                "@semantic-release/git",
-                {
-                    "assets": [
-                        "CHANGELOG.md",
-                        "package.json",
-                        "yarn.lock",
-                        "composer.json",
-                        "composer.lock"
-                    ],
-                    "message": "chore(release): v${nextRelease.version} [release]"
-                }
-            ],
-            "@semantic-release/github"
-        ]
-    }
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
