--- a/.github/workflows/semver_tag.yml
+++ b/.github/workflows/semver_tag.yml
@@ -26,7 +26,7 @@ jobs:
         id: calculate-version
         uses: bitshifted/git-auto-semver@v1
         with:
-          main_branch: main
+          main_branch: beta
           create_tag: true
       - name: Use version
         run: 'echo "Calculated version: ${{ steps.calculate-version.outputs.version-string }}"'
