refactor(beta): :recycle: Added extra logging for Feedback
The feedback command does not properly work within the Prod version of the bot. Added logging to determine the issue.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
     "cooldown",
     "Crossmark",
     "iwavesmedia",
+    "Kitsu",
+    "scry",
+    "Scryfall",
     "Vulgarbear"
-  ]
+  ],
+  "docwriter.style": "Auto-detect"
 }
