--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
         "dev": "nodemon --ext js,json,ts ./src/sekhmet.js"
     },
     "dependencies": {
+        "@commandkit/legacy": "^0.1.1",
         "axios": "^1.8.4",
         "commandkit": "^0.1.10",
         "discord.js": "^14.18.0",
         "dotenv": "^16.4.7",
         "global": "^4.4.0",
-        "mongoose": "^8.13.1",
+        "mongoose": "^8.13.2",
         "nodemon": "^3.1.9",
         "pino": "^9.6.0",
         "pino-pretty": "^13.0.0"
